# Advanced-AI

./: .gitignore  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
PP1: GPT2/: model_solution.py
PP2: Vision/: CLIP.ipynb  VIT.ipynb  VLM.ipynb  VLM_solution.ipynb
PP3: CLIP/: model_solution.py
docs/practicals/: pp2-vision.md  pp3-clip.md  pp5-pretraining.md
